<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/resultats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">


        <TextView
            android:id="@+id/ResultEdits"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ButtonRow01"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn07"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="sevenOnClick"
                android:text="@string/seven"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn08"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="eightOnClick"
                android:text="@string/eight"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn09"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="nineOnClick"
                android:text="@string/nine"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnadd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="addOnClick"
                android:text="@string/plus"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow02"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn04"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="fourOnClick"
                android:text="@string/four"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn05"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="fiveOnClick"
                android:text="@string/five"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn06"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="sixOnClick"
                android:text="@string/six"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnsubstract"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="subtractOnClick"
                android:text="@string/subs"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow03"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="oneOnClick"
                android:text="@string/one"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="twoOnClick"
                android:text="@string/two"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn03"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="threeOnClick"
                android:text="@string/three"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btndivide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="divideOnClick"
                android:text="@string/div"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow04"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn00"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="zeroOnClick"
                android:text="@string/zero"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnclear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="clearOnClick"
                android:text="@string/C"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btndot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="dotOnClick"
                android:text="@string/dot"
                android:textColor="@color/black" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:onClick="multiplyOnClick"
                android:text="@string/mult"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow05"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:backgroundTint="@color/grey"
                android:onClick="equalOnClick"
                android:text="@string/equal"
                android:textColor="@color/black" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>